adding testcase,dynamic title,setup function in testing,layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>InitialSetup</title>
+<!--     <title>InitialSetup</title>
+ -->
+<!--     Above titile commented to display dynamic title
+ -->    
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
