refactor code using erb functions and layouts

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>About | Ruby on Rails Tutorial Sample App</title>
-</head>
-<body>
-	<h1>About</h1>
-	<p>
-	  Want to get more about the book then visit this 
-	  <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-	  Want to know more about the author then visit this
-	  <a href="https://www.softcover.io/about">More about the author</a>
-	</p>
-</body>
-</html>
+<% provide(:title, "About") %>
+<h1>About</h1>
+<p>
+  Want to get more about the book then visit this 
+  <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+  Want to know more about the author then visit this
+  <a href="https://www.softcover.io/about">More about the author</a>
+</p>
+
+
