Addition of signup page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
+<% provide(:title, 'Sign up') %>
 <h1>New User</h1>
+<p>Signup here to create your account </p>
 
 <%= render 'form', user: @user %>
 
