--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,9 @@
 <% provide(:title, 'Sign up') %>
-<h1>New User</h1>
-<p>Signup here to create your account </p>
-
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<h1>New User</h1>
+		<p>Signup here to create your account </p>
+		<%= render 'form', user: @user %>
+		<%= link_to 'Back', users_path %>
+	</div>
+</div>	
