Updation of users data

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,5 @@
-<%= form_with(model: user, local: true) do |form| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_with(model: @user, local: true) do |form| %>
+  <%= render 'shared/error_messages' %>
 
   <div class="field">
     <%= form.label :name %>
@@ -32,6 +22,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Create my account", class: "btn btn-primary" %>
+  <%= form.submit yield(:buttonText), class: "btn btn-primary" %>
   </div>
 <% end %>
