--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,10 @@
 <% provide(:title, 'Sign up') %>
+<% provide(:button_text, 'Create my account') %>
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<h1>New User</h1>
 		<p>Signup here to create your account </p>
-		<%= render 'form', user: @user %>
+		<%= render 'form'%>
 		<%= link_to 'Back', users_path %>
 	</div>
 </div>	
