--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Sign up') %>
-<% provide(:button_text, 'Create my account') %>
+<% provide(:buttonText, 'Create my account') %>
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<h1>New User</h1>
