--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,35 +2,19 @@
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
-    <p id="notice"><%= notice %></p>
-	<%= gravatar_for @user %>
-	<p>
-	  <strong>Name:</strong>
-	  <%= @user.name %>
-	</p>
-
-	<p>
-	  <strong>Email:</strong>
-	  <%= @user.email %>
-	</p>
-
-	<p>
-	  <strong>Created At:</strong>
-	  <%= @user.created_at %>
-	</p>
-
-	<p>
-	  <strong>Updated User At:</strong>
-	  <%= @user.updated_at %>
-	</p>
-
-	<p>
-	  <strong>Current time:</strong>
-	  <%= Time.now %>
-	</p>
-
-	<%= link_to 'Edit', edit_user_path(@user) %> |
-	<%= link_to 'Back', users_path %>
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.microposts.any? %>
+      <h3>Microposts (<%= @user.microposts.count %>)</h3>
+      <ol class="microposts">
+        <%= render @microposts %>
+      </ol>
+      <%= will_paginate @microposts %>
+    <% end %>
+  </div>
 </div>
